Working jar